# rustle

./: .gitignore  Cargo.toml  README.md  build.rs  code-health.toml
.cargo/: mutants.toml
agent-bootstrap/: Cargo.toml
agent-bootstrap/src/: main.rs
docs/: architecture.md  code-health.md  performance.md  release.md  status.md  systems-audit-2026-06-18.md  troubleshooting.md
rustle_lints/: Cargo.toml  README.md
scripts/: bench-agent-dns-lab.sh  bench-agent-reconnect-lab.sh  bench-agent-udp-lab.sh  bench-bridge-lab.sh  bench-live-compare.sh  bench-live-fixture.sh  build-agent-sidecars.sh  code-health.py  prepare-agent-sidecars.sh  smoke-agent-active-failure-lab.sh  smoke-agent-bridge-lab.sh  smoke-agent-lab.sh  smoke-agent-reconnect-lab.sh  smoke-agent-sidecars.sh  smoke-agent-udp-lab.sh  smoke-bridge-lab.sh  smoke-lib.sh  smoke-linux-netns-tcp.sh  smoke-linux-netns-udp.sh  smoke-live-tunnel.sh  smoke-live-udp.sh  smoke-quic-agent-lab.sh  smoke-ssh-config-alias-lab.sh  smoke-tun-dns.sh  smoke-windows-tun.ps1  stress-bridge-lab.sh  summarize-agent-startup-trace.py  summarize-agent-writer-status.py  summarize-hotpath-trace.py  summarize-live-evidence.py  summarize-quic-diagnostics.py  verify-live-benchmark-rows.py  verify-live-evidence.py  verify-live-fixture-rows.py  verify-local.sh  verify-release-archives.py  verify-release-candidate.sh  verify-release-matrix.py  verify-windows-tun-smoke.py
src/: agent_bridge.rs  agent_client.rs  agent_io.rs  agent_lab.rs  agent_proto.rs  agent_runtime.rs  agent_transport.rs  agent_window.rs  bridge_lab.rs  bridge_runtime.rs  (+29 more)
(+77 files in other folders)
